--- a/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
+++ b/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
@@ -67,8 +67,20 @@
     <Compile Include="ModelCV.cs" />
     <Compile Include="movimientos.cs" />
     <Compile Include="productos.cs" />
+    <Compile Include="ProductosQry.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductosQry.Designer.cs">
+      <DependentUpon>ProductosQry.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductosQry.resx">
+      <DependentUpon>ProductosQry.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -77,6 +89,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -91,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back08.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
