--- a/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
+++ b/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
@@ -73,6 +73,12 @@
     <Compile Include="ProductosQry.Designer.cs">
       <DependentUpon>ProductosQry.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProductosUpd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductosUpd.Designer.cs">
+      <DependentUpon>ProductosUpd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ProductosQry.resx">
       <DependentUpon>ProductosQry.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductosUpd.resx">
+      <DependentUpon>ProductosUpd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
