--- a/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
+++ b/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompraProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CompraProductos.Designer.cs">
+      <DependentUpon>CompraProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VentaProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VentaProductos.Designer.cs">
+      <DependentUpon>VentaProductos.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="CompraProductos.resx">
+      <DependentUpon>CompraProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -100,6 +115,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VentaProductos.resx">
+      <DependentUpon>VentaProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
