--- a/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
+++ b/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
@@ -87,6 +87,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReporteProdStock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReporteProdStock.Designer.cs">
+      <DependentUpon>ReporteProdStock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReporteVXP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReporteVXP.Designer.cs">
+      <DependentUpon>ReporteVXP.cs</DependentUpon>
+    </Compile>
     <Compile Include="VentaProductos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +127,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReporteProdStock.resx">
+      <DependentUpon>ReporteProdStock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReporteVXP.resx">
+      <DependentUpon>ReporteVXP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VentaProductos.resx">
       <DependentUpon>VentaProductos.cs</DependentUpon>
     </EmbeddedResource>
