--- a/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
+++ b/EntityFrameworkLinQ05/EntityFrameworkLinQ05.csproj
@@ -87,6 +87,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReporteCXP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReporteCXP.Designer.cs">
+      <DependentUpon>ReporteCXP.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReporteProdStock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReporteCXP.resx">
+      <DependentUpon>ReporteCXP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReporteProdStock.resx">
       <DependentUpon>ReporteProdStock.cs</DependentUpon>
     </EmbeddedResource>
